Updated card component with real-time fetched JSON values

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
 
 .search-results {
     margin-top: 36px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    /*display: flex;*/
+    /*justify-content: space-evenly;*/
+    /*align-items: center;*/
 }
